[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | venv/
  | .idea/
)/'''


[tool.poetry]
name = "repo_template"
version = "0.1.0"
description = "Template description"
authors = ["Ross <rostikvunarchuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pylint = "^2.14.4"
uvicorn = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
fail-under = 5.0